--- a/Editor_de_Texto.html
+++ b/Editor_de_Texto.html
@@ -23,7 +23,12 @@
   --reveal-bg:rgba(255,255,255,0.2);
 }
 *{box-sizing:border-box;margin:0;}
-body{padding:72px 20px 24px;background:var(--bg);color:var(--text);font-family:Arial,Helvetica,sans-serif;}
+body{
+  padding:72px 20px 24px;
+  background:var(--bg);
+  color:var(--text);
+  font-family:-apple-system,BlinkMacSystemFont,"SF Pro Text","San Francisco","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
 /* ---------- TOOLBAR ---------- */
 #toolbar{
   position:fixed;top:0;left:0;right:0;z-index:100;
@@ -58,8 +63,7 @@ button:hover{background:var(--accent);}button:active{transform:scale(.96);}#mess
   border-radius:var(--radius);
 
   /* fonte/tamanho fixos */
-  font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont,
-               "San Francisco", system-ui, sans-serif;
+  font-family:-apple-system,BlinkMacSystemFont,"SF Pro Text","San Francisco","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size:16px;
   line-height:1.3;
 
@@ -77,7 +81,7 @@ button:hover{background:var(--accent);}button:active{transform:scale(.96);}#mess
 }
 
 #editor p{margin:2px 0;line-height:1.3;}
-#editor sup,#editor sub{font-size:0.5em;}
+#editor sup,#editor sub{font-size:0.4em;}
 
 /* preserva o estilo das formulas KaTeX */
 #editor .katex,#editor .katex *{
