--- a/Editor_de_Texto.html
+++ b/Editor_de_Texto.html
@@ -23,7 +23,7 @@
   --reveal-bg:rgba(255,255,255,0.2);
 }
 *{box-sizing:border-box;margin:0;}
-body{padding:72px 20px 24px;background:var(--bg);color:var(--text);font-family:Arial,Helvetica,sans-serif;}
+body{padding:0 20px 24px;background:var(--bg);color:var(--text);font-family:Arial,Helvetica,sans-serif;}
 /* ---------- TOOLBAR ---------- */
 #toolbar{
   position:sticky;top:0;left:0;right:0;z-index:100;
@@ -76,6 +76,9 @@ button:hover{background:var(--accent);}button:active{transform:scale(.96);}#mess
   white-space:pre-wrap !important;
   overflow-wrap:break-word !important;
   word-break:break-word   !important;
+}
+#editor sup,#editor sub{
+  font-size:0.7em !important;
 }
 
 #editor p{margin:2px 0;line-height:1.3;}
@@ -297,11 +300,17 @@ latexBtn.onclick=()=>{
   latexInput.focus();
 };
 latexInput.addEventListener('input',()=>{
-  try{latexPreview.innerHTML=katex.renderToString(latexInput.value,{throwOnError:false});}
-  catch(e){latexPreview.textContent='Erro';}
+  if(window.katex){
+    try{
+      latexPreview.innerHTML=katex.renderToString(latexInput.value,{throwOnError:false});
+    }catch(e){latexPreview.textContent='Erro';}
+  }else{
+    latexPreview.textContent='KaTeX não carregado';
+  }
 });
 latexCancel.onclick=()=>{latexDialog.style.display='none';};
 latexInsert.onclick=()=>{
+  if(!window.katex){alert('KaTeX não carregado');return;}
   try{
     const span=document.createElement('span');
     katex.render(latexInput.value,span,{throwOnError:false});
