Use CDN for KaTeX

--- a/Editor_de_Texto.html
+++ b/Editor_de_Texto.html
@@ -8,8 +8,8 @@
 <!-- Font Awesome -->
 <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css" integrity="sha384-g7c+FDAVq9lhN7S0pzpItwhynm5vG+8dxjLXTv9AJawRdL5sZq2df75+nhh8hZ+3" crossorigin="anonymous">
-<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js" integrity="sha384-Ek3pGtTaV1yeQzN3oP8wgn2+Q7fPrT+dqTrNoPmG+70H6LkJ//pT8UgzjHiG6lZL" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
+<script src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
 
 <style>
 :root{
