--- a/Editor_de_Texto.html
+++ b/Editor_de_Texto.html
@@ -77,8 +77,10 @@ button:hover{background:var(--accent);}button:active{transform:scale(.96);}#mess
   overflow-wrap:break-word !important;
   word-break:break-word   !important;
 }
-#editor sup,#editor sub{
-  font-size:0.3em !important;
+#editor sup,#editor sub,
+#editor span[style*="vertical-align: super"],
+#editor span[style*="vertical-align: sub"]{
+  font-size:0.6em !important;
 }
 
 #editor p{margin:2px 0;line-height:1.3;}
@@ -154,7 +156,14 @@ button:hover{background:var(--accent);}button:active{transform:scale(.96);}#mess
 #latexDialog{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.7);z-index:1000;}
 #latexDialog .box{background:var(--surface);padding:10px;border-radius:var(--radius);min-width:260px;}
 #latexDialog textarea{width:100%;min-height:60px;background:var(--bg);color:var(--text);border:1px solid var(--accent);border-radius:var(--radius);padding:6px;}
-#latexPreview{margin:6px 0;}
+#latexPreview{
+  margin:6px 0;
+  padding:4px;
+  min-height:32px;
+  background:var(--surface-light);
+  border:1px solid var(--accent);
+  border-radius:var(--radius);
+}
 </style>
 </head>
 <body>
@@ -312,6 +321,7 @@ latexCancel.onclick=()=>{latexDialog.style.display='none';};
 latexInsert.onclick=()=>{
   if(!window.katex){alert('KaTeX não carregado');return;}
   try{
+    restoreSel();
     const span=document.createElement('span');
     katex.render(latexInput.value,span,{throwOnError:false});
     insertNode(span);
