--- a/Editor_de_Texto.html
+++ b/Editor_de_Texto.html
@@ -153,7 +153,10 @@ button:hover{background:var(--accent);}button:active{transform:scale(.96);}#mess
 #latexDialog .box{background:var(--surface);padding:10px;border-radius:var(--radius);min-width:260px;}
 #latexDialog textarea{width:100%;min-height:60px;background:var(--bg);color:var(--text);border:1px solid var(--accent);border-radius:var(--radius);padding:6px;}
 #latexPreview{margin:6px 0;}
-.latex-formula{display:inline-block;cursor:pointer;vertical-align:middle;}
+.latex-box{display:inline-block;vertical-align:middle;background:var(--surface-light);border:1px solid var(--accent);border-radius:4px;padding:2px 4px;position:relative;cursor:pointer;}
+.latex-box .remove{position:absolute;top:-6px;right:-6px;width:12px;height:12px;line-height:12px;text-align:center;background:var(--accent);color:var(--text);font-size:10px;border-radius:50%;display:none;}
+.latex-box:hover .remove{display:block;}
+.latex-formula{pointer-events:none;}
 </style>
 </head>
 <body>
@@ -345,24 +348,33 @@ latexInsert.onclick=()=>{
   if(!window.katex){alert("KaTeX não carregado");return;}
   try{
     if(latexTarget){
-      katex.render(latexInput.value, latexTarget,{throwOnError:false});
+      const formula = latexTarget.querySelector('.latex-formula');
+      katex.render(latexInput.value, formula,{throwOnError:false});
       latexTarget.dataset.latex=latexInput.value;
     }else{
-      const span=document.createElement("span");
-      span.className="latex-formula";
-      span.dataset.latex=latexInput.value;
-      katex.render(latexInput.value,span,{throwOnError:false});
-      insertNode(span);
+      const box=document.createElement("span");
+      box.className="latex-box";
+      box.dataset.latex=latexInput.value;
+      const formula=document.createElement("span");
+      formula.className="latex-formula";
+      katex.render(latexInput.value,formula,{throwOnError:false});
+      const remove=document.createElement('span');
+      remove.className='remove';
+      remove.textContent='×';
+      remove.onclick=e=>{e.stopPropagation();box.remove();};
+      box.appendChild(formula);
+      box.appendChild(remove);
+      insertNode(box);
     }
     latexDialog.style.display="none";
     latexTarget=null;
   }catch(e){alert("Expressão inválida");}
 }
 editor.addEventListener("dblclick",e=>{
-  const el=e.target.closest(".latex-formula");
-  if(!el)return;
-  latexTarget=el;
-  latexInput.value=el.dataset.latex||"";
+  const box=e.target.closest(".latex-box");
+  if(!box)return;
+  latexTarget=box;
+  latexInput.value=box.dataset.latex||"";
   if(window.katex){
     try{latexPreview.innerHTML=katex.renderToString(latexInput.value,{throwOnError:false});}
     catch(err){latexPreview.textContent="Erro";}
@@ -691,6 +703,19 @@ window.addEventListener('DOMContentLoaded',()=>{
   });
   document.querySelectorAll('.tarja').forEach(t=>t.style.backgroundColor='rgba(0,0,0,.95)');
   document.querySelectorAll('#editor img').forEach(makeResizable);
+  document.querySelectorAll('#editor .latex-formula').forEach(form=>{
+    if(form.closest('.latex-box')) return;
+    const wrapper=document.createElement('span');
+    wrapper.className='latex-box';
+    wrapper.dataset.latex=form.dataset.latex||'';
+    const remove=document.createElement('span');
+    remove.className='remove';
+    remove.textContent='×';
+    remove.onclick=e=>{e.stopPropagation();wrapper.remove();};
+    form.replaceWith(wrapper);
+    wrapper.appendChild(form);
+    wrapper.appendChild(remove);
+  });
 });
 /* ---------- FIM DO SCRIPT ---------- */
 </script>
