Add exam listing and display

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <!-- Menu flutuante das configurações -->
     <div id="settingsMenu">
       <button id="trilhaBtn">Trilha Estratégica</button>
+      <button id="examsBtn">Provas e Simulados</button>
       <button id="importBtn">Importar</button>
       <button id="exportBtn">Exportar</button>
     </div>
