--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
   <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-database-compat.js"></script>
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyAeg-hLnJQe7u4MYy2RW4v0Zhx3np6fdIg",
       authDomain: "newtonius.firebaseapp.com",
+      databaseURL: "https://newtonius-default-rtdb.firebaseio.com",
       projectId: "newtonius",
       storageBucket: "newtonius.appspot.com",
       messagingSenderId: "23787439183"
