--- a/Editor_de_Texto.html
+++ b/Editor_de_Texto.html
@@ -52,7 +52,7 @@ button:hover{background:var(--accent);}button:active{transform:scale(.96);}#mess
 #editor{
   border:1px solid var(--accent);
   margin-top:0;
-  padding: 3px 3px;     
+  padding: 3px 3px 1em;
   min-height:300px;
   background:var(--surface);
   color:var(--text);
