Add comment option to trail picker and update styles

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
       <div class="picker-row">
         <select id="pickerDisc"></select>
         <select id="pickerSub"></select>
+        <input id="pickerComment" type="text" placeholder="Comentário" style="display:none;"/>
       </div>
       <div class="picker-actions">
         <button id="pickerAdd">Adicionar</button>
