Rename micro simulado and fix cancel

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       </div>
       <div class="picker-actions">
         <button id="pickerAdd">Adicionar</button>
-        <button id="pickerMicro" style="display:none;">Micro Simulado</button>
+        <button id="pickerMicro" style="display:none;">Simulado de Matemática</button>
         <button id="pickerCancel">Cancelar</button>
       </div>
     </div>
