--- a/index.html
+++ b/index.html
@@ -66,12 +66,13 @@
       <button id="exportBtn">Exportar</button>
     </div>
     <div class="header-top">
-      <span id="headerTitle">Título Dinâmico</span>
+      <span id="headerTitle">Título Dinâmico
+        <span id="orderHint" class="order-hint" style="display:none"></span>
+      </span>
       <button id="summaryBtn" class="summary-btn" style="display:none">Resumo</button>
     </div>
     <div class="header-bottom">
       <span id="headerStats" class="stat neutral">Estatísticas</span>
-      <span id="orderHint" class="order-hint" style="visibility:hidden"></span>
     </div>
   </div>
 
